Resources/clean_c_files_rte/c_files_acsl_by_rte/output_altergo_tests/output_ded_altergo.txt
[kernel] Parsing ded_rte.c (with preprocessing)
[kernel] ded_rte.c:1: 
  syntax error:
  Location: line 1, column 1, before or at token: [
  1     [kernel] Warning: no input file.
        ^
  2     [kernel] Parsing ded.c (with preprocessing)
  3     [kernel:typing:implicit-function-declaration] ded.c:3: Warning:
[kernel] Frama-C aborted: invalid user input.
